# slam-project-scferro

./: README.md  Tasks.md  citations.txt  comments.txt
citations/: chatgpt_03022024.txt  chatgpt_05022024.txt  chatgpt_08022024.txt  chatgpt_09022024_1.txt  chatgpt_09022024_2.txt  chatgpt_21012024.txt  chatgpt_22012024.txt
nusim/: CMakeLists.txt  README.md  package.xml
nusim/config/: basic_world.yaml  nusim.rviz
nusim/launch/: nusim.launch.xml
nusim/src/: nusim.cpp
nuslam/: CMakeLists.txt  README.md  package.xml
nuslam/config/: slam.rviz
nuslam/launch/: landmark_detect.launch.xml  pc_bringup.launch.xml  slam.launch.xml  slam_fake_obs.launch.xml  slam_with_lidar.launch.xml  turtlebot_bringup.launch.xml
nuslam/src/: landmarks.cpp  nuslam.cpp
nuslam/test/: circle_test.cpp  circle_test.launch.py
nuturtle_control/: CMakeLists.txt  README.md  package.xml
nuturtle_control/config/: nuturtle_control.rviz  nuturtle_control_nusim.rviz  nuturtle_control_remote.rviz
nuturtle_control/launch/: start_robot.launch.xml
nuturtle_control/src/: circle.cpp  odometry.cpp  turtle_control.cpp
nuturtle_control/test/: circle_test.launch.py  odometry_test.cpp  odometry_test.launch.py  turtle_control_test.cpp  turtle_control_test.launch.py  turtle_control_test.launch.xml
nuturtle_description/: CMakeLists.txt  README.md  package.xml
nuturtle_description/config/: basic_all.rviz  basic_blue.rviz  basic_green.rviz  basic_purple.rviz  basic_red.rviz  diff_params.yaml
nuturtle_description/launch/: load_all.launch.xml  load_one.launch.py
nuturtle_description/urdf/: turtlebot3_burger.urdf.xacro
turtlelib/: CMakeLists.txt  README.md
turtlelib/exercises/: B6_frame_input.txt  B6_frame_output.txt
turtlelib/include/turtlelib/: diff_drive.hpp  geometry2d.hpp  se2d.hpp  svg.hpp
turtlelib/src/: diff_drive.cpp  frame_main.cpp  geometry2d.cpp  se2d.cpp  svg.cpp
turtlelib/tests/: test_diff_drive.cpp  test_geometry2d.cpp  test_se2d.cpp  test_svg.cpp
